--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,25 @@
 [project]
 name = "asana-tools"
 version = "0.1.0"
-description = "Add your description here"
+description = "Automatic human-readable ID assignment for Asana tasks"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "click>=8.1.0",
+    "httpx>=0.27.0",
+    "pydantic>=2.0.0",
+    "pyyaml>=6.0.0",
+]
 
 [project.scripts]
-aa = "main:main"
+aa = "aa.cli:main"
+
+[tool.uv]
+package = true
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["aa"]
