Update package to use `aa-cli` as the command name instead of `aa`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ Repository = "https://github.com/umaxfun/asana-tools"
 Issues = "https://github.com/umaxfun/asana-tools/issues"
 
 [project.scripts]
-aa = "aa.cli:main"
+aa-cli = "aa.cli:main"
 
 [tool.uv]
 package = true
